# PyVatsim

./: .gitignore  LICENSE  Makefile  constants.py  example.py  pyproject.toml  readme.md  requirements.txt  vatsim.py
.github/workflows/: main.yaml
examples/: discordbot.py  example.py  geo.py
src/pyvatsim/: __init__.py  liveapi.py  utils.py
src/vatsim/: __init__.py  liveapi.py
src/vatsim_api/: __init__.py  vatsim_live_api.py
tests/: conftest.py  placeholder  test_dataclasses.py
