[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyvatsim"
version = "0.1.2"
authors = [
  { name="Ken Greim", email="ken.greim+vatsimapi@gmail.com" },
]
description = "Library to access Vatsim live data and APIs"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  'requests >= 2.28',
]

[project.urls]
"Homepage" = "https://github.com/kengreim/Vatsim-Py-API"
"Bug Tracker" = "https://github.com/kengreim/Vatsim-Py-API/issues"